--- a/OpenSky.Client/Pages/AircraftMarket.xaml
+++ b/OpenSky.Client/Pages/AircraftMarket.xaml
@@ -33,6 +33,7 @@
         <converters:NullItemToVisibilityConverter x:Key="NullItemToVisibilityConverter" />
         <converters:SettingsUnitConverter x:Key="SettingsUnitConverter" />
         <converters:VisibilityInverterConverter x:Key="VisibilityInverterConverter" />
+        <converters:AircraftRegistryConverter x:Key="AircraftRegistryConverter" />
         <DrawingBrush x:Key="GreyDottedBrush" Viewport="0,0,3,3" ViewportUnits="Absolute" TileMode="Tile">
             <DrawingBrush.Drawing>
                 <DrawingGroup>
@@ -224,9 +225,10 @@
                         </DataTemplate>
                     </DataGrid.Resources>
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="Registry" Binding="{Binding Registry}" FontFamily="Consolas" FontSize="16" />
+                        <DataGridTextColumn Header="Registry" Binding="{Binding Registry, Converter={StaticResource AircraftRegistryConverter}}" FontFamily="Consolas" FontSize="16" />
                         <DataGridTextColumn Header="Location" Binding="{Binding AirportICAO}" Visibility="{Binding Source={x:Reference LocationVisibilityProxy}, Path=Visibility}" FontFamily="Consolas" FontSize="16" />
                         <DataGridTemplateColumn Header="Type" CellTemplate="{StaticResource AircraftTypeCellTemplate}" SortMemberPath="Type.Name" CanUserSort="True" />
+                        <DataGridTextColumn Header="Simulator" Binding="{Binding Type.Simulator}" />
                         <DataGridTemplateColumn Header="Fuel" CellTemplate="{StaticResource FuelCellTemplate}" SortMemberPath="Fuel" CanUserSort="True" />
                         <DataGridTemplateColumn Header="Purchase Price" CellTemplate="{StaticResource PurchasePriceCellTemplate}" SortMemberPath="PurchasePrice" CanUserSort="True" SortDirection="Ascending" dgx:DataGridFilterColumn.Template="{StaticResource MinMaxDoubleFilterWithPopupControl}" />
                         <DataGridTemplateColumn Header="Rental Price" CellTemplate="{StaticResource RentPriceCellTemplate}" SortMemberPath="RentPrice" CanUserSort="True" dgx:DataGridFilterColumn.Template="{StaticResource MinMaxDoubleFilterWithPopupControl}" />
@@ -239,7 +241,7 @@
             <GroupBox.Header>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock FontSize="15" FontWeight="DemiBold">Purchase aircraft:</TextBlock>
-                    <TextBlock FontSize="15" FontWeight="DemiBold" Text="{Binding AircraftToPurchase.Registry}" Margin="5,0,0,0" />
+                    <TextBlock FontSize="15" FontWeight="DemiBold" Text="{Binding AircraftToPurchase.Registry, Converter={StaticResource AircraftRegistryConverter}}" Margin="5,0,0,0" />
                     <Button Padding="0" MinHeight="20" MaxHeight="20" Margin="5,0,0,0" Command="{Binding CancelPurchaseAircraftCommand}">✖</Button>
                 </StackPanel>
             </GroupBox.Header>
@@ -256,6 +258,7 @@
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -280,40 +283,42 @@
 
                 <TextBlock Grid.Row="5" Grid.Column="0" Margin="0,10,0,0">Registry</TextBlock>
                 <TextBlock Grid.Row="6" Grid.Column="0">Type</TextBlock>
-                <TextBlock Grid.Row="7" Grid.Column="0" VerticalAlignment="Center">Variant</TextBlock>
-                <TextBlock Grid.Row="8" Grid.Column="0">Location</TextBlock>
-                <TextBlock Grid.Row="9" Grid.Column="0">Fuel</TextBlock>
-                <TextBlock Grid.Row="10" Grid.Column="0">Condition</TextBlock>
-                <TextBlock Grid.Row="5" Grid.Column="1" FontFamily="Consolas" Margin="0,10,0,0" Text="{Binding AircraftToPurchase.Registry}" />
+                <TextBlock Grid.Row="7" Grid.Column="0">Simulator</TextBlock>
+                <TextBlock Grid.Row="8" Grid.Column="0" VerticalAlignment="Center">Variant</TextBlock>
+                <TextBlock Grid.Row="9" Grid.Column="0">Location</TextBlock>
+                <TextBlock Grid.Row="10" Grid.Column="0">Fuel</TextBlock>
+                <TextBlock Grid.Row="11" Grid.Column="0">Condition</TextBlock>
+                <TextBlock Grid.Row="5" Grid.Column="1" FontFamily="Consolas" Margin="0,10,0,0" Text="{Binding AircraftToPurchase.Registry, Converter={StaticResource AircraftRegistryConverter}}" />
                 <TextBlock Grid.Row="6" Grid.Column="1" FontFamily="Consolas" Text="{Binding AircraftToPurchase.Type.Name}" />
-                <TextBlock Grid.Row="7" Grid.Column="1" FontFamily="Consolas" Visibility="{Binding PurchaseAircraftVariantsVisibility, Converter={StaticResource VisibilityInverterConverter}}">-- n/a --</TextBlock>
-                <ComboBox Grid.Row="7" Grid.Column="1" Visibility="{Binding PurchaseAircraftVariantsVisibility}" FontFamily="Consolas" FontSize="11" HorizontalAlignment="Stretch" ItemsSource="{Binding PurchaseAircraftVariants}" SelectedItem="{Binding SelectedPurchaseAircraftVariant, Mode=TwoWay}" />
-                <TextBlock Grid.Row="8" Grid.Column="1" FontFamily="Consolas" Text="{Binding AircraftToPurchase.AirportICAO}" />
-                <TextBlock Grid.Row="9" Grid.Column="1" FontFamily="Consolas" Text="{Binding AircraftToPurchase.Fuel, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=fuel|F2|true}" />
-                <TextBlock Grid.Row="10" Grid.Column="1" FontFamily="Consolas" Text="--todo--" />
+                <TextBlock Grid.Row="7" Grid.Column="1" FontFamily="Consolas" Text="{Binding AircraftToPurchase.Type.Simulator}" />
+                <TextBlock Grid.Row="8" Grid.Column="1" FontFamily="Consolas" Visibility="{Binding PurchaseAircraftVariantsVisibility, Converter={StaticResource VisibilityInverterConverter}}">-- n/a --</TextBlock>
+                <ComboBox Grid.Row="8" Grid.Column="1" Visibility="{Binding PurchaseAircraftVariantsVisibility}" FontFamily="Consolas" FontSize="11" HorizontalAlignment="Stretch" ItemsSource="{Binding PurchaseAircraftVariants}" SelectedItem="{Binding SelectedPurchaseAircraftVariant, Mode=TwoWay}" />
+                <TextBlock Grid.Row="9" Grid.Column="1" FontFamily="Consolas" Text="{Binding AircraftToPurchase.AirportICAO}" />
+                <TextBlock Grid.Row="10" Grid.Column="1" FontFamily="Consolas" Text="{Binding AircraftToPurchase.Fuel, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=fuel|F2|true}" />
+                <TextBlock Grid.Row="11" Grid.Column="1" FontFamily="Consolas" Text="--todo--" />
 
-                <TextBlock Grid.Row="11" Grid.Column="0" Margin="0,15" Grid.ColumnSpan="2" MaxWidth="350" TextWrapping="Wrap"><Bold>2. Purchase Price.</Bold> Buyer will pay to Seller for the Goods and for all obligations specified in this Agreement, if any, as the full and complete purchase price, the sum of:</TextBlock>
+                <TextBlock Grid.Row="12" Grid.Column="0" Margin="0,15" Grid.ColumnSpan="2" MaxWidth="350" TextWrapping="Wrap"><Bold>2. Purchase Price.</Bold> Buyer will pay to Seller for the Goods and for all obligations specified in this Agreement, if any, as the full and complete purchase price, the sum of:</TextBlock>
 
-                <TextBlock Grid.Row="12" Grid.Column="0" Margin="0,5,0,0">Sale price</TextBlock>
-                <controls:SkybucksCurrency Grid.Row="12" Grid.Column="1" FontSize="15" FontFamily="Consolas" HorizontalAlignment="Left" VerticalAlignment="Center" Currency="{Binding AircraftToPurchase.PurchasePrice}" Margin="0,5,0,0" />
+                <TextBlock Grid.Row="13" Grid.Column="0" Margin="0,5,0,0">Sale price</TextBlock>
+                <controls:SkybucksCurrency Grid.Row="13" Grid.Column="1" FontSize="15" FontFamily="Consolas" HorizontalAlignment="Left" VerticalAlignment="Center" Currency="{Binding AircraftToPurchase.PurchasePrice}" Margin="0,5,0,0" />
 
-                <TextBlock Grid.Row="13" Grid.Column="0" Margin="0,15, 0, 25" Grid.ColumnSpan="2" MaxWidth="350" TextWrapping="Wrap">Buyer shall be responsible for all taxes in connection with the purchase of Goods in this Agreement.</TextBlock>
+                <TextBlock Grid.Row="14" Grid.Column="0" Margin="0,15, 0, 25" Grid.ColumnSpan="2" MaxWidth="350" TextWrapping="Wrap">Buyer shall be responsible for all taxes in connection with the purchase of Goods in this Agreement.</TextBlock>
 
-                <TextBlock Grid.Row="14" Grid.Column="0" VerticalAlignment="Bottom" MinHeight="20">Signature</TextBlock>
-                <TextBlock Grid.Row="14" Grid.Column="1" FontFamily="Kunstler Script" FontSize="50" VerticalAlignment="Top" Text="{Binding Signature}" />
-                <Border Grid.Row="14" Grid.Column="0" Grid.ColumnSpan="2" BorderThickness="0,0,0,1" Background="Transparent" BorderBrush="{StaticResource GreyDottedBrush}" />
+                <TextBlock Grid.Row="15" Grid.Column="0" VerticalAlignment="Bottom" MinHeight="20">Signature</TextBlock>
+                <TextBlock Grid.Row="15" Grid.Column="1" FontFamily="Kunstler Script" FontSize="50" VerticalAlignment="Top" Text="{Binding Signature}" />
+                <Border Grid.Row="15" Grid.Column="0" Grid.ColumnSpan="2" BorderThickness="0,0,0,1" Background="Transparent" BorderBrush="{StaticResource GreyDottedBrush}" />
 
-                <Image Grid.Row="14" Grid.Column="1" Height="50" HorizontalAlignment="Right" Source="{StaticResource PaperArrow}" />
+                <Image Grid.Row="15" Grid.Column="1" Height="50" HorizontalAlignment="Right" Source="{StaticResource PaperArrow}" />
 
-                <Border BorderThickness="0" Cursor="Pen" Grid.Row="14" Grid.Column="0" Grid.ColumnSpan="2" Background="Transparent" IsHitTestVisible="True">
+                <Border BorderThickness="0" Cursor="Pen" Grid.Row="15" Grid.Column="0" Grid.ColumnSpan="2" Background="Transparent" IsHitTestVisible="True">
                     <Border.InputBindings>
                         <MouseBinding MouseAction="LeftClick" Command="{Binding SignPurchaseCommand}"></MouseBinding>
                     </Border.InputBindings>
                 </Border>
 
-                <Image Grid.Row="15" Grid.Column="0" Grid.ColumnSpan="2" Visibility="{Binding SoldStampVisibility}" Width="200" Margin="0,-30,10,0" HorizontalAlignment="Right" Source="{StaticResource Sold}" />
+                <Image Grid.Row="16" Grid.Column="0" Grid.ColumnSpan="2" Visibility="{Binding SoldStampVisibility}" Width="200" Margin="0,-30,10,0" HorizontalAlignment="Right" Source="{StaticResource Sold}" />
 
-                <Button Grid.Row="15" Grid.Column="0" Grid.ColumnSpan="2" Visibility="{Binding SoldStampVisibility, Converter={StaticResource VisibilityInverterConverter}}" Style="{StaticResource OpenSkyRedButtonStyle}" Command="{Binding CancelPurchaseAircraftCommand}" Margin="0,15,0,0">Cancel Purchase</Button>
+                <Button Grid.Row="16" Grid.Column="0" Grid.ColumnSpan="2" Visibility="{Binding SoldStampVisibility, Converter={StaticResource VisibilityInverterConverter}}" Style="{StaticResource OpenSkyRedButtonStyle}" Command="{Binding CancelPurchaseAircraftCommand}" Margin="0,15,0,0">Cancel Purchase</Button>
             </Grid>
         </GroupBox>
     </Grid>
