--- a/OpenSky.Client/Pages/FlightLog.xaml
+++ b/OpenSky.Client/Pages/FlightLog.xaml
@@ -28,6 +28,7 @@
     </UserControl.DataContext>
     <UserControl.Resources>
         <converters:SettingsUnitConverter x:Key="SettingsUnitConverter" />
+        <converters:AircraftRegistryConverter x:Key="AircraftRegistryConverter" />
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -64,6 +65,7 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
@@ -75,28 +77,30 @@
                     <TextBlock Grid.Row="2" Grid.Column="0">Alternate</TextBlock>
                     <TextBlock Grid.Row="3" Grid.Column="0">Landed</TextBlock>
                     <TextBlock Grid.Row="4" Grid.Column="0">Aircraft</TextBlock>
-                    <TextBlock Grid.Row="6" Grid.Column="0">Off block</TextBlock>
-                    <TextBlock Grid.Row="7" Grid.Column="0">On block</TextBlock>
-                    <TextBlock Grid.Row="8" Grid.Column="0">UTC offset</TextBlock>
-                    <TextBlock Grid.Row="9" Grid.Column="0">Time warp?</TextBlock>
+                    <TextBlock Grid.Row="6" Grid.Column="0">Simulator</TextBlock>
+                    <TextBlock Grid.Row="7" Grid.Column="0">Off block</TextBlock>
+                    <TextBlock Grid.Row="8" Grid.Column="0">On block</TextBlock>
+                    <TextBlock Grid.Row="9" Grid.Column="0">UTC offset</TextBlock>
+                    <TextBlock Grid.Row="10" Grid.Column="0">Time warp?</TextBlock>
 
                     <TextBlock Grid.Row="0" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.OriginICAO}" Margin="10,0" />
                     <TextBlock Grid.Row="1" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.DestinationICAO}" Margin="10,0" />
                     <TextBlock Grid.Row="2" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.AlternateICAO}" Margin="10,0" />
                     <TextBlock Grid.Row="3" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.LandedAtICAOCrash}" Margin="10,0" />
-                    <TextBlock Grid.Row="4" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.AircraftRegistry}" Grid.ColumnSpan="2" Margin="10,0" />
+                    <TextBlock Grid.Row="4" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.AircraftRegistry, Converter={StaticResource AircraftRegistryConverter}}" Grid.ColumnSpan="2" Margin="10,0" />
                     <TextBlock Grid.Row="5" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.AircraftType}" Grid.ColumnSpan="2" Margin="10,0" />
-                    <TextBlock Grid.Row="6" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.OffBlock}" Grid.ColumnSpan="2" Margin="10,0" />
-                    <TextBlock Grid.Row="7" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.OnBlock}" Grid.ColumnSpan="2" Margin="10,0" />
-                    <TextBlock Grid.Row="8" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.UtcOffset}" Margin="10,0" />
-                    <TextBlock Grid.Row="9" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.TimeWarpInfo}" Margin="10,0" />
+                    <TextBlock Grid.Row="6" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.Simulator}" Grid.ColumnSpan="2" Margin="10,0" />
+                    <TextBlock Grid.Row="7" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.OffBlock}" Grid.ColumnSpan="2" Margin="10,0" />
+                    <TextBlock Grid.Row="8" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.OnBlock}" Grid.ColumnSpan="2" Margin="10,0" />
+                    <TextBlock Grid.Row="9" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.UtcOffset}" Margin="10,0" />
+                    <TextBlock Grid.Row="10" Grid.Column="1" FontFamily="Consolas" Text="{Binding FlightLog.TimeWarpInfo}" Margin="10,0" />
 
                     <TextBlock Grid.Row="0" Grid.Column="2" Text="{Binding FlightLog.Origin}" HorizontalAlignment="Right" />
                     <TextBlock Grid.Row="1" Grid.Column="2" Text="{Binding FlightLog.Destination}" HorizontalAlignment="Right" />
                     <TextBlock Grid.Row="2" Grid.Column="2" Text="{Binding FlightLog.Alternate}" HorizontalAlignment="Right" />
                     <TextBlock Grid.Row="3" Grid.Column="2" Text="{Binding FlightLog.LandedAtCrash}" HorizontalAlignment="Right" />
 
-                    <DockPanel Grid.Row="10" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,10,0,0">
+                    <DockPanel Grid.Row="11" Grid.Column="0" Grid.ColumnSpan="3" Margin="0,10,0,0">
                         <Button DockPanel.Dock="Left" Command="{Binding ToggleLandingReportCommand}" Content="{Binding ShowHideLandingReportButtonText}" />
                         <Button DockPanel.Dock="Right" Command="{Binding ToggleOfpCommand}" Content="{Binding ShowHideOFPButtonText}" Margin="5,0,0,0" HorizontalAlignment="Right" />
                     </DockPanel>
