--- a/OpenSky.Client/Pages/FlightPlans.xaml
+++ b/OpenSky.Client/Pages/FlightPlans.xaml
@@ -81,6 +81,7 @@
                         <DataGridTextColumn Header="Origin" Binding="{Binding OriginICAO}" FontFamily="Consolas" FontSize="16" />
                         <DataGridTextColumn Header="Destination" Binding="{Binding DestinationICAO}" FontFamily="Consolas" FontSize="16" />
                         <DataGridTextColumn Header="Aircraft" Binding="{Binding Aircraft}" FontFamily="Consolas" FontSize="14" />
+                        <DataGridTextColumn Header="Simulator" Binding="{Binding Aircraft.Type.Simulator}" FontFamily="Consolas" FontSize="14" />
                         <DataGridTextColumn Header="Payload" Binding="{Binding TotalPayloadWeight, Converter={StaticResource SettingsUnitConverter}, ConverterParameter=weight|F1|true}" />
                         <DataGridTextColumn Header="Utc Offset" Binding="{Binding UtcOffset}" />
                         <DataGridTextColumn Header="Airline pilot" />
