--- a/OpenSky.Client/Pages/WorldStatistics.xaml
+++ b/OpenSky.Client/Pages/WorldStatistics.xaml
@@ -56,11 +56,16 @@
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalAirports}" />
-                    <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Total Airports</TextBlock>
-                    <syncfusion:SfChart Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <StackPanel Grid.Column="0" Orientation="Vertical" VerticalAlignment="Center">
+                        <TextBlock FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalAirports}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Total Airports</TextBlock>
+                        <TextBlock FontSize="35" Margin="30,20,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalAirportsMSFS}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-5,30,10" VerticalAlignment="Top">MSFS</TextBlock>
+                        <TextBlock FontSize="35" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalAirportsXP11}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-5,30,10" VerticalAlignment="Top">X-Plane 11</TextBlock>
+                    </StackPanel>
+                    <syncfusion:SfChart Grid.Column="1" Height="220" Padding="0" Width="320">
                         <syncfusion:SfChart.Series>
                             <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.AirportSizes}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="OutsideExtended" StartAngle="-45" EndAngle="315" GroupMode="Angle" GroupTo="5" SegmentSpacing="0.03" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
                                 <syncfusion:DoughnutSeries.AdornmentsInfo>
@@ -80,7 +85,7 @@
                             </syncfusion:DoughnutSeries>
                         </syncfusion:SfChart.Series>
                     </syncfusion:SfChart>
-                    <syncfusion:SfChart Margin="30,0,0,0" Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <syncfusion:SfChart Margin="30,0,0,0" Grid.Column="2" Height="220" Padding="0" Width="320">
                         <syncfusion:SfChart.Series>
                             <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.FuelAvailability}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="OutsideExtended" GroupMode="Angle" GroupTo="0" SegmentSpacing="0.05" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
                                 <syncfusion:DoughnutSeries.AdornmentsInfo>
@@ -114,11 +119,16 @@
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalRunways}" />
-                    <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Total Runways</TextBlock>
-                    <syncfusion:SfChart Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <StackPanel Grid.Column="0" Orientation="Vertical" VerticalAlignment="Center">
+                        <TextBlock FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalRunways}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Total Runways</TextBlock>
+                        <TextBlock FontSize="35" Margin="30,20,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalRunwaysMSFS}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-5,30,10" VerticalAlignment="Top">MSFS</TextBlock>
+                        <TextBlock FontSize="35" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalRunwaysXP11}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-5,30,10" VerticalAlignment="Top">X-Plane 11</TextBlock>
+                    </StackPanel>
+                    <syncfusion:SfChart Grid.Column="1" Height="220" Padding="0" Width="320">
                         <syncfusion:SfChart.Series>
                             <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.RunwaySurfaces}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="Outside" StartAngle="-45" EndAngle="315" GroupMode="Angle" GroupTo="5" SegmentSpacing="0.03" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
                                 <syncfusion:DoughnutSeries.AdornmentsInfo>
@@ -138,7 +148,7 @@
                             </syncfusion:DoughnutSeries>
                         </syncfusion:SfChart.Series>
                     </syncfusion:SfChart>
-                    <syncfusion:SfChart Margin="30,0,0,0" Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <syncfusion:SfChart Margin="30,0,0,0" Grid.Column="2" Height="220" Padding="0" Width="320">
                         <syncfusion:SfChart.Series>
                             <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.RunwayLights}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="OutsideExtended" GroupMode="Angle" GroupTo="0" SegmentSpacing="0.02" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
                                 <syncfusion:DoughnutSeries.AdornmentsInfo>
@@ -172,11 +182,16 @@
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalApproaches}" />
-                    <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Total Approaches</TextBlock>
-                    <syncfusion:SfChart Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <StackPanel Grid.Column="0" Orientation="Vertical" VerticalAlignment="Center">
+                        <TextBlock FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalApproaches}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Total Approaches</TextBlock>
+                        <TextBlock FontSize="35" Margin="30,20,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalApproachesMSFS}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-5,30,10" VerticalAlignment="Top">MSFS</TextBlock>
+                        <TextBlock FontSize="35" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalApproachesXP11}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-5,30,10" VerticalAlignment="Top">X-Plane 11</TextBlock>
+                    </StackPanel>
+                    <syncfusion:SfChart Grid.Column="1" Height="220" Padding="0" Width="320">
                         <syncfusion:SfChart.Series>
                             <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.ApproachTypes}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="Outside" StartAngle="20" EndAngle="380"  GroupMode="Angle" GroupTo="5" SegmentSpacing="0.03" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
                                 <syncfusion:DoughnutSeries.AdornmentsInfo>
@@ -210,11 +225,16 @@
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalAircraft}" />
-                    <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Total Aircraft</TextBlock>
-                    <syncfusion:SfChart Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <StackPanel Grid.Column="0" Orientation="Vertical" VerticalAlignment="Center">
+                        <TextBlock FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalAircraft}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Total Aircraft</TextBlock>
+                        <TextBlock FontSize="35" Margin="30,20,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalAircraftMSFS}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-5,30,10" VerticalAlignment="Top">MSFS</TextBlock>
+                        <TextBlock FontSize="35" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalAircraftXP11}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-5,30,10" VerticalAlignment="Top">X-Plane 11</TextBlock>
+                    </StackPanel>
+                    <syncfusion:SfChart Grid.Column="1" Height="220" Padding="0" Width="320">
                         <syncfusion:SfChart.Series>
                             <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.AircraftCategories}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="Outside" StartAngle="20" EndAngle="380"  GroupMode="Angle" GroupTo="5" SegmentSpacing="0.03" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
                                 <syncfusion:DoughnutSeries.AdornmentsInfo>
@@ -234,7 +254,7 @@
                             </syncfusion:DoughnutSeries>
                         </syncfusion:SfChart.Series>
                     </syncfusion:SfChart>
-                    <syncfusion:SfChart Margin="30,0,0,0" Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <syncfusion:SfChart Margin="30,0,0,0" Grid.Column="2" Height="220" Padding="0" Width="320">
                         <syncfusion:SfChart.Series>
                             <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.AircraftOwner}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="OutsideExtended" GroupMode="Angle" GroupTo="0" SegmentSpacing="0.02" Palette="Custom" StartAngle="90" EndAngle="450" ColorModel="{StaticResource OpenSkyTealChartColors}">
                                 <syncfusion:DoughnutSeries.AdornmentsInfo>
@@ -277,6 +297,10 @@
                         <TextBlock HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Generated Jobs</TextBlock>
                         <TextBlock FontSize="60" Margin="30,30,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalJobs}" />
                         <TextBlock HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Completed Jobs</TextBlock>
+                        <TextBlock FontSize="35" Margin="30,20,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalJobsMSFS}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-5,30,10" VerticalAlignment="Top">MSFS</TextBlock>
+                        <TextBlock FontSize="35" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.TotalJobsXP11}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-5,30,10" VerticalAlignment="Top">X-Plane 11</TextBlock>
                     </StackPanel>
                     <syncfusion:SfChart Grid.Row="0" Grid.Column="1" Height="220" Padding="0" Width="320">
                         <syncfusion:SfChart.Series>
@@ -352,11 +376,16 @@
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
-                    <TextBlock Grid.Row="0" Grid.Column="0" FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.CompletedFlights}" />
-                    <TextBlock Grid.Row="1" Grid.Column="0" HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Completed Flights</TextBlock>
-                    <syncfusion:SfChart Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <StackPanel Grid.Column="0" Orientation="Vertical" VerticalAlignment="Center">
+                        <TextBlock FontSize="60" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.CompletedFlights}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-10,30,10" VerticalAlignment="Top">Completed Flights</TextBlock>
+                        <TextBlock FontSize="35" Margin="30,20,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.CompletedFlightsMSFS}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-5,30,10" VerticalAlignment="Top">MSFS</TextBlock>
+                        <TextBlock FontSize="35" Margin="30,0,30,0" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding Overview.CompletedFlightsXP11}" />
+                        <TextBlock HorizontalAlignment="Center" Margin="30,-5,30,10" VerticalAlignment="Top">X-Plane 11</TextBlock>
+                    </StackPanel>
+                    <syncfusion:SfChart Grid.Column="1" Height="220" Padding="0" Width="320">
                         <syncfusion:SfChart.Series>
                             <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.FlightOperators}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="OutsideExtended" StartAngle="-45" EndAngle="315" GroupMode="Angle" GroupTo="5" SegmentSpacing="0.03" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
                                 <syncfusion:DoughnutSeries.AdornmentsInfo>
@@ -376,7 +405,7 @@
                             </syncfusion:DoughnutSeries>
                         </syncfusion:SfChart.Series>
                     </syncfusion:SfChart>
-                    <syncfusion:SfChart Margin="30,0,0,0" Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" Height="220" Padding="0" Width="320">
+                    <syncfusion:SfChart Margin="30,0,0,0" Grid.Column="2" Height="220" Padding="0" Width="320">
                         <syncfusion:SfChart.Series>
                             <syncfusion:DoughnutSeries ItemsSource="{Binding Overview.FlightAircraftCategories}" XBindingPath="Key" YBindingPath="Value" EnableAnimation="True" EnableSmartLabels="True" DoughnutCoefficient="0.5" LabelPosition="OutsideExtended" GroupMode="Angle" GroupTo="0" SegmentSpacing="0.05" Palette="Custom" ColorModel="{StaticResource OpenSkyTealChartColors}">
                                 <syncfusion:DoughnutSeries.AdornmentsInfo>
