Updated aircraft type editor with new changes
Got aircraft type details loading correctly in tooltips

--- a/OpenSky.Client/Pages/AircraftMarket.xaml
+++ b/OpenSky.Client/Pages/AircraftMarket.xaml
@@ -22,6 +22,7 @@
                       xmlns:tools="clr-namespace:OpenSky.Client.Tools"
                       xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
                       xmlns:dgx="urn:tom-englert.de/DataGridExtensions"
+                      xmlns:pages="clr-namespace:OpenSky.Client.Pages"
                       mc:Ignorable="d"
                       LoadingText="{Binding LoadingText}" Loaded="AircraftMarketOnLoaded"
                       VerticalScrollBar="False" HorizontalScrollBar="False"
@@ -63,7 +64,11 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
-        <GroupBox Grid.Column="0">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="1*" />
+        </Grid.RowDefinitions>
+        <GroupBox Grid.Row="0" Grid.Column="0">
             <GroupBox.Header>
                 <TextBlock FontWeight="DemiBold">Search for Aircraft</TextBlock>
             </GroupBox.Header>
@@ -159,7 +164,8 @@
                 </StackPanel>
             </Grid>
         </GroupBox>
-        <GroupBox Grid.Column="1">
+        <controls:AircraftTypeDetails Grid.Row="1" Grid.Column="0" AircraftType="{Binding RelativeSource={RelativeSource AncestorType={x:Type pages:AircraftMarket}}, Path=DataContext.SelectedAircraft.Type}" />
+        <GroupBox Grid.Row="0" Grid.Column="1" Grid.RowSpan="2">
             <GroupBox.Header>
                 <TextBlock FontWeight="DemiBold" Text="{Binding AvailableAircraftHeader}" />
             </GroupBox.Header>
@@ -250,7 +256,7 @@
                 </DataGrid>
             </Grid>
         </GroupBox>
-        <GroupBox Grid.Column="2" Visibility="{Binding PurchaseAircraftVisibility}" tools:VisibilityAnimation.AnimationType="SlideFromRight">
+        <GroupBox Grid.Row="0" Grid.Column="2" Grid.RowSpan="2" Visibility="{Binding PurchaseAircraftVisibility}" tools:VisibilityAnimation.AnimationType="SlideFromRight">
             <GroupBox.Header>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock FontSize="15" FontWeight="DemiBold">Purchase aircraft:</TextBlock>
