--- a/OpenSky.Client/Controls/AircraftTypeDetails.xaml
+++ b/OpenSky.Client/Controls/AircraftTypeDetails.xaml
@@ -17,7 +17,7 @@
                  xmlns:models="clr-namespace:OpenSky.Client.Controls.Models"
                  xmlns:converters="clr-namespace:OpenSky.Client.Converters"
                  xmlns:ui="http://schemas.modernwpf.com/2019"
-                 mc:Ignorable="d" 
+                 mc:Ignorable="d" Loaded="AircraftTypeDetailsOnLoaded"
                  d:DesignHeight="800" d:DesignWidth="700">
     <UserControl.DataContext>
         <models:AircraftTypeDetailsViewModel />
@@ -54,7 +54,8 @@
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
 
-                <Image Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Width="640" Height="360" Source="/Resources/aircraftTypePlaceholder.png" HorizontalAlignment="Left" />
+                <Image Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Width="640" Height="360" Source="{Binding AircraftImage, Mode=OneWay}" HorizontalAlignment="Left" />
+                <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="30" Foreground="{StaticResource OpenSkyTealLightBrush}" Text="{Binding AircraftImagePlaceholderText, Mode=OneWay}" TextWrapping="Wrap" />
                 <Border Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Background="#B0000000" Visibility="{Binding LoadingVisibility}">
                     <StackPanel Orientation="Vertical" VerticalAlignment="Center">
                         <ui:ProgressRing IsActive="True" Width="100" Height="100"></ui:ProgressRing>
